--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,26 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added af-ZA.jsonl to dataframe\n",
+      "Added am-ET.jsonl to dataframe\n",
+      "Added ar-SA.jsonl to dataframe\n",
+      "Added az-AZ.jsonl to dataframe\n",
+      "Added bn-BD.jsonl to dataframe\n",
+      "Added cy-GB.jsonl to dataframe\n",
+      "Added da-DK.jsonl to dataframe\n",
+      "Added de-DE.jsonl to dataframe\n",
+      "Added el-GR.jsonl to dataframe\n",
+      "Added en-US.jsonl to dataframe\n",
+      "Added es-ES.jsonl to dataframe\n",
+      "Added fa-IR.jsonl to dataframe\n",
+      "Added fi-FI.jsonl to dataframe\n",
+      "Added fr-FR.jsonl to dataframe\n",
+      "Added he-IL.jsonl to dataframe\n",
+      "Added hi-IN.jsonl to dataframe\n",
+      "Added hu-HU.jsonl to dataframe\n",
+      "Added hy-AM.jsonl to dataframe\n",
+      "Added id-ID.jsonl to dataframe\n",
+      "Added is-IS.jsonl to dataframe\n",
+      "Added it-IT.jsonl to dataframe\n",
+      "Added ja-JP.jsonl to dataframe\n",
+      "Added jv-ID.jsonl to dataframe\n",
+      "Added ka-GE.jsonl to dataframe\n",
+      "Added km-KH.jsonl to dataframe\n",
+      "Added kn-IN.jsonl to dataframe\n",
+      "Added ko-KR.jsonl to dataframe\n",
+      "Added lv-LV.jsonl to dataframe\n",
+      "Added ml-IN.jsonl to dataframe\n",
+      "Added mn-MN.jsonl to dataframe\n",
+      "Added ms-MY.jsonl to dataframe\n",
+      "Added my-MM.jsonl to dataframe\n",
+      "Added nb-NO.jsonl to dataframe\n",
+      "Added nl-NL.jsonl to dataframe\n",
+      "Added pl-PL.jsonl to dataframe\n",
+      "Added pt-PT.jsonl to dataframe\n",
+      "Added ro-RO.jsonl to dataframe\n",
+      "Added ru-RU.jsonl to dataframe\n",
+      "Added sl-SL.jsonl to dataframe\n",
+      "Added sq-AL.jsonl to dataframe\n",
+      "Added sv-SE.jsonl to dataframe\n",
+      "Added sw-KE.jsonl to dataframe\n",
+      "Added ta-IN.jsonl to dataframe\n",
+      "Added te-IN.jsonl to dataframe\n",
+      "Added th-TH.jsonl to dataframe\n",
+      "Added tl-PH.jsonl to dataframe\n",
+      "Added tr-TR.jsonl to dataframe\n",
+      "Added ur-PK.jsonl to dataframe\n",
+      "Added vi-VN.jsonl to dataframe\n",
+      "Added zh-CN.jsonl to dataframe\n",
+      "Added zh-TW.jsonl to dataframe\n"
+     ]
+    }
+   ],
    "source": [
     "# load the pt-pt json file into a dataframe\n",
     "import pandas as pd\n",
-    "import os \n",
+    "import os\n",
     "\n",
-    "df = pd.DataFrame()\n",
+    "# df = pd.DataFrame()\n",
     "\n",
-    "for json_file in os.listdir('dataset'):\n",
-    "    df = pd.concat([df, pd.read_json('dataset/' + json_file, lines=True)])\n",
-    "    print(f\"Added {json_file} to dataframe\")\n",
+    "# for json_file in os.listdir(\"dataset/jsonl/\"):\n",
+    "#     df = pd.concat([df, pd.read_json(\"dataset/jsonl/\" + json_file, lines=True)])\n",
+    "#     print(f\"Added {json_file} to dataframe.\")\n",
     "\n",
-    "df['locale'] = df['locale'].apply(lambda x: x.split('-')[0])"
+    "df = pd.read_json(\"dataset/jsonl/en-US.jsonl\", lines=True)\n",
+    "\n",
+    "df[\"locale\"] = df[\"locale\"].apply(lambda x: x.split(\"-\")[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +91,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>locale</th>\n",
+       "      <th>partition</th>\n",
+       "      <th>scenario</th>\n",
+       "      <th>intent</th>\n",
+       "      <th>utt</th>\n",
+       "      <th>annot_utt</th>\n",
+       "      <th>worker_id</th>\n",
+       "      <th>slot_method</th>\n",
+       "      <th>judgments</th>\n",
+       "      <th>utt_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>af</td>\n",
+       "      <td>test</td>\n",
+       "      <td>alarm</td>\n",
+       "      <td>alarm_set</td>\n",
+       "      <td>[maak, my, wakker, om, vyf, v, m, die, week]</td>\n",
+       "      <td>maak my wakker om [time : vyf v. m.] [date : d...</td>\n",
+       "      <td>37</td>\n",
+       "      <td>[{'slot': 'time', 'method': 'localization'}, {...</td>\n",
+       "      <td>[{'worker_id': '20', 'intent_score': 1, 'slots...</td>\n",
+       "      <td>(m, a, a, k,  , m, y,  , w, a, k, k, e, r,  , ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>af</td>\n",
+       "      <td>train</td>\n",
+       "      <td>alarm</td>\n",
+       "      <td>alarm_set</td>\n",
+       "      <td>[maak, my, wakker, negeuur, v, m, op, vrydag]</td>\n",
+       "      <td>maak my wakker [time : nege-uur v. m.] op [dat...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>[{'slot': 'time', 'method': 'translation'}, {'...</td>\n",
+       "      <td>[{'worker_id': '40', 'intent_score': 1, 'slots...</td>\n",
+       "      <td>(m, a, a, k,  , m, y,  , w, a, k, k, e, r,  , ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>af</td>\n",
+       "      <td>train</td>\n",
+       "      <td>alarm</td>\n",
+       "      <td>alarm_set</td>\n",
+       "      <td>[stel, n, alarm, vir, twee, ure, van, nou, af]</td>\n",
+       "      <td>stel 'n alarm vir [time : twee ure van nou af]</td>\n",
+       "      <td>20</td>\n",
+       "      <td>[{'slot': 'time', 'method': 'translation'}]</td>\n",
+       "      <td>[{'worker_id': '64', 'intent_score': 1, 'slots...</td>\n",
+       "      <td>(s, t, e, l,  , n,  , a, l, a, r, m,  , v, i, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>af</td>\n",
+       "      <td>test</td>\n",
+       "      <td>audio</td>\n",
+       "      <td>audio_volume_mute</td>\n",
+       "      <td>[stil]</td>\n",
+       "      <td>stil</td>\n",
+       "      <td>40</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'worker_id': '45', 'intent_score': 1, 'slots...</td>\n",
+       "      <td>(s, t, i, l)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>af</td>\n",
+       "      <td>train</td>\n",
+       "      <td>audio</td>\n",
+       "      <td>audio_volume_mute</td>\n",
+       "      <td>[janneman, stilte]</td>\n",
+       "      <td>janneman stilte</td>\n",
+       "      <td>40</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'worker_id': '45', 'intent_score': 1, 'slots...</td>\n",
+       "      <td>(j, a, n, n, e, m, a, n,  , s, t, i, l, t, e)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id locale partition scenario             intent  \\\n",
+       "0   0     af      test    alarm          alarm_set   \n",
+       "1   1     af     train    alarm          alarm_set   \n",
+       "2   2     af     train    alarm          alarm_set   \n",
+       "3   3     af      test    audio  audio_volume_mute   \n",
+       "4   4     af     train    audio  audio_volume_mute   \n",
+       "\n",
+       "                                              utt  \\\n",
+       "0    [maak, my, wakker, om, vyf, v, m, die, week]   \n",
+       "1   [maak, my, wakker, negeuur, v, m, op, vrydag]   \n",
+       "2  [stel, n, alarm, vir, twee, ure, van, nou, af]   \n",
+       "3                                          [stil]   \n",
+       "4                              [janneman, stilte]   \n",
+       "\n",
+       "                                           annot_utt  worker_id  \\\n",
+       "0  maak my wakker om [time : vyf v. m.] [date : d...         37   \n",
+       "1  maak my wakker [time : nege-uur v. m.] op [dat...         20   \n",
+       "2     stel 'n alarm vir [time : twee ure van nou af]         20   \n",
+       "3                                               stil         40   \n",
+       "4                                    janneman stilte         40   \n",
+       "\n",
+       "                                         slot_method  \\\n",
+       "0  [{'slot': 'time', 'method': 'localization'}, {...   \n",
+       "1  [{'slot': 'time', 'method': 'translation'}, {'...   \n",
+       "2        [{'slot': 'time', 'method': 'translation'}]   \n",
+       "3                                                 []   \n",
+       "4                                                 []   \n",
+       "\n",
+       "                                           judgments  \\\n",
+       "0  [{'worker_id': '20', 'intent_score': 1, 'slots...   \n",
+       "1  [{'worker_id': '40', 'intent_score': 1, 'slots...   \n",
+       "2  [{'worker_id': '64', 'intent_score': 1, 'slots...   \n",
+       "3  [{'worker_id': '45', 'intent_score': 1, 'slots...   \n",
+       "4  [{'worker_id': '45', 'intent_score': 1, 'slots...   \n",
+       "\n",
+       "                                            utt_text  \n",
+       "0  (m, a, a, k,  , m, y,  , w, a, k, k, e, r,  , ...  \n",
+       "1  (m, a, a, k,  , m, y,  , w, a, k, k, e, r,  , ...  \n",
+       "2  (s, t, e, l,  , n,  , a, l, a, r, m,  , v, i, ...  \n",
+       "3                                       (s, t, i, l)  \n",
+       "4      (j, a, n, n, e, m, a, n,  , s, t, i, l, t, e)  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = remove_punctuation(df)\n",
-    "df.head()"
+    "from toolz.functoolz import pipe\n",
+    "\n",
+    "df = pipe(\n",
+    "    df,\n",
+    "    remove_punctuation,\n",
+    "    lowercase,\n",
+    "    tokenize,\n",
+    "    apply_stemming,\n",
+    ")\n"
    ]
   },
   {
@@ -45,37 +270,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = lowercase(df)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = tokenize(df)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = apply_stemming(df)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df['locale'] == 'en']"
+    "df['utt'] = df['utt'].apply(lambda x: \" \".join(x))\n",
+    "\n",
+    "print(f\"Finished preprocessing dataset.\\n\\n\")"
    ]
   }
  ],
