--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -13,21 +13,10 @@
     "%matplotlib inline \n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.model_selection import train_test_split, RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, RocCurveDisplay, make_scorer\n",
     "from sklearn.model_selection import learning_curve\n",
-    "from imblearn.combine import SMOTETomek\n",
-    "from imblearn.under_sampling import TomekLinks\n",
     "import datetime\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier, StackingClassifier\n",
-    "from lightgbm import LGBMClassifier\n",
-    "from xgboost import XGBClassifier\n",
     "# Adapted from https://scikit-learn.org/stable/auto_examples/model_selection/plot_learning_curve.html\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -43,9 +32,9 @@
    "source": [
     "def plot_learning_curve(\n",
     "    title,\n",
-    "    train_sizes, \n",
-    "    train_scores, \n",
-    "    test_scores, \n",
+    "    train_sizes,\n",
+    "    train_scores,\n",
+    "    test_scores,\n",
     "    fit_times,\n",
     "    score_times,\n",
     "    axes=None,\n",
@@ -116,7 +105,7 @@
     "    axes = axes.reshape(-1)\n",
     "    fig.subplots_adjust(hspace=0.5, wspace=0.5)\n",
     "    fig = fig.delaxes(axes[-1])\n",
-    "    \n",
+    "\n",
     "    axes[0].set_title(title)\n",
     "    if ylim is not None:\n",
     "        axes[0].set_ylim(*ylim)\n",
@@ -227,6 +216,7 @@
    "source": [
     "# The following helper functions are for training and evaluating the model\n",
     "\n",
+    "\n",
     "def show_confusion_matrix(cms, target_names):\n",
     "    \"\"\"\n",
     "    This helper function plots the confusion matrices calculated when evaluating the model.\n",
@@ -236,108 +226,183 @@
     "\n",
     "    gnames = [\"True Negative\", \"False Positive\", \"False Negative\", \"True Positive\"]\n",
     "    gcounts = [f\"{v:0.0f}\" for v in cms.flatten()]\n",
-    "    gpercentages = [f\"{v:.2%}\" for v in cms.flatten()/np.sum(cms)]\n",
-    "    annot = np.asarray([f\"{name}\\n{count}\\n{percentage}\" for name, count, percentage in zip(gnames, gcounts, gpercentages)]).reshape(2, 2)\n",
+    "    gpercentages = [f\"{v:.2%}\" for v in cms.flatten() / np.sum(cms)]\n",
+    "    annot = np.asarray(\n",
+    "        [\n",
+    "            f\"{name}\\n{count}\\n{percentage}\"\n",
+    "            for name, count, percentage in zip(gnames, gcounts, gpercentages)\n",
+    "        ]\n",
+    "    ).reshape(2, 2)\n",
     "\n",
-    "    sns.heatmap(cms, ax=ax, annot=annot, fmt=\"\", cmap=\"Blues\", xticklabels=target_names, yticklabels=target_names)\n",
-    "    ax.set_ylabel('Actual')\n",
-    "    ax.set_xlabel('Predicted')\n",
+    "    sns.heatmap(\n",
+    "        cms,\n",
+    "        ax=ax,\n",
+    "        annot=annot,\n",
+    "        fmt=\"\",\n",
+    "        cmap=\"Blues\",\n",
+    "        xticklabels=target_names,\n",
+    "        yticklabels=target_names,\n",
+    "    )\n",
+    "    ax.set_ylabel(\"Actual\")\n",
+    "    ax.set_xlabel(\"Predicted\")\n",
     "    ax.xaxis.tick_top()\n",
-    "    ax.xaxis.set_label_position('top')\n",
+    "    ax.xaxis.set_label_position(\"top\")\n",
     "\n",
-    "def evaluate_model(model, testing_inputs, testing_classes, output_cols, sample_weight=None):\n",
+    "\n",
+    "def evaluate_model(model, X_test, y_test, sample_weight=None):\n",
     "    \"\"\"\n",
     "    This helper function prints the report and evaluation metrics for the model.\n",
     "    \"\"\"\n",
-    "    predictions = model.predict(testing_inputs)\n",
-    "    predictions_prob = (model.predict_proba(testing_inputs))[:, 1]\n",
+    "    predictions = model.predict(X_test)\n",
     "\n",
-    "    print(\"=\"*70)\n",
+    "    print(\"-\" * 50)\n",
     "    print(f\"Evaluation metrics for {model.__class__.__name__}\")\n",
-    "    print(\"=\"*70)\n",
+    "    print(\"-\" * 50)\n",
     "\n",
-    "    score = model.score(testing_inputs, testing_classes) \n",
+    "    score = model.score(X_test, y_test)\n",
     "    print(f\"{model.__class__.__name__}'s default score metric: {score}\")\n",
-    "\n",
     "\n",
     "    print(\"Classification report\")\n",
     "    print(\n",
-    "        classification_report(testing_classes, predictions, sample_weight=sample_weight, digits=4, zero_division=1)\n",
+    "        classification_report(\n",
+    "            y_test,\n",
+    "            predictions,\n",
+    "            sample_weight=sample_weight,\n",
+    "            digits=4,\n",
+    "            zero_division=1,\n",
+    "        )\n",
     "    )\n",
     "\n",
-    "    accuracy = accuracy_score(testing_classes, predictions, sample_weight=sample_weight)\n",
+    "    accuracy = accuracy_score(y_test, predictions, sample_weight=sample_weight)\n",
     "    print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "    print(f\"F1 Macro-Score: {f1_score(testing_classes, predictions, average='macro'):.4f}\")\n",
+    "    print(f\"F1 Macro-Score: {f1_score(y_test, predictions, average='macro'):.4f}\")\n",
     "\n",
-    "    cms = confusion_matrix(testing_classes, predictions, sample_weight=sample_weight)\n",
-    "    show_confusion_matrix(cms, ['no', 'yes'])\n",
+    "    print(\"-\" * 50)\n",
     "\n",
-    "    print(\"=\"*70)\n",
     "\n",
-    "def train_and_evaluate(input_cols, output_cols, model, params, scoring, n_iter=None, sample_weight=None, random_state=42, plot_roc=True, transformed = False, oversample=False):\n",
+    "def train_and_evaluate(\n",
+    "    X,\n",
+    "    y,\n",
+    "    model,\n",
+    "    params,\n",
+    "    scoring,\n",
+    "    n_iter=None,\n",
+    "    sample_weight=None,\n",
+    "    random_state=42,\n",
+    "):\n",
     "    \"\"\"\n",
-    "    This function trains the model and prints the evaluation metrics, as well as the confusion matrices, and learning and scalability plots.\n",
+    "    Trains the model and prints the evaluation metrics, as well as the confusion matrices, and learning and scalability plots.\n",
     "    \"\"\"\n",
-    "    inputs = data[input_cols].values\n",
-    "    classes = data[output_cols].values\n",
-    "    \n",
-    "    if (transformed):\n",
-    "        inputs = data_transformed[input_cols].values\n",
-    "        classes = data_transformed[output_cols].values\n",
-    "    \n",
-    "    (training_inputs, testing_inputs, training_classes, testing_classes) = train_test_split(inputs, classes, test_size=0.2, shuffle=False, random_state=random_state)\n",
-    "    \n",
-    "    pipeline = Pipeline([('model', model)])\n",
-    "    \n",
-    "    if (oversample):\n",
-    "        pipeline = Pipeline([\n",
-    "            ('resampler', SMOTETomek(tomek=TomekLinks(sampling_strategy='majority'))),\n",
-    "            ('model', model)\n",
-    "        ])\n",
-    "    \n",
+    "\n",
+    "    X_train, X_test = X\n",
+    "    y_train, y_test = y\n",
+    "\n",
+    "    pipeline = Pipeline([(\"model\", model)])\n",
+    "\n",
     "    scoring = make_scorer(scoring, needs_proba=True)\n",
     "\n",
     "    if n_iter == None:\n",
     "        clf = GridSearchCV(pipeline, params, n_jobs=-1, scoring=scoring, verbose=0)\n",
     "    else:\n",
-    "       clf = RandomizedSearchCV(\n",
-    "            pipeline, params, n_iter=n_iter, scoring=scoring,\n",
-    "            n_jobs=-1, random_state=random_state, verbose=0)\n",
+    "        clf = RandomizedSearchCV(\n",
+    "            pipeline,\n",
+    "            params,\n",
+    "            n_iter=n_iter,\n",
+    "            scoring=scoring,\n",
+    "            n_jobs=-1,\n",
+    "            random_state=random_state,\n",
+    "            verbose=0,\n",
+    "        )\n",
     "\n",
     "    train_sizes, train_scores, test_scores, fit_times, score_times = learning_curve(\n",
-    "        clf, training_inputs, training_classes, return_times=True, cv=5, n_jobs=-1, random_state=random_state)\n",
+    "        clf,\n",
+    "        X_train,\n",
+    "        y_train,\n",
+    "        return_times=True,\n",
+    "        cv=5,\n",
+    "        n_jobs=-1,\n",
+    "        random_state=random_state,\n",
+    "    )\n",
     "\n",
-    "    plot_learning_curve(f\"Learning curves for {model.__class__.__name__}\",\n",
-    "        train_sizes, train_scores, test_scores, fit_times, score_times)\n",
-    "    \n",
-    "    resclf = clf.fit(training_inputs, training_classes)\n",
+    "    plot_learning_curve(\n",
+    "        f\"Learning curves for {model.__class__.__name__}\",\n",
+    "        train_sizes,\n",
+    "        train_scores,\n",
+    "        test_scores,\n",
+    "        fit_times,\n",
+    "        score_times,\n",
+    "    )\n",
     "\n",
-    "    if plot_roc:\n",
-    "        RocCurveDisplay.from_estimator(resclf, testing_inputs, testing_classes)\n",
-    "        plt.show()\n",
+    "    res_clf = clf.fit(X_train, y_train)\n",
     "\n",
-    "    if isinstance(model, DecisionTreeClassifier):\n",
-    "        plot_tree(resclf.best_estimator_['model'], feature_names=input_cols)\n",
-    "        plt.savefig(f'output/{model.__class__.__name__}_tree_diagram.svg')\n",
-    "    \n",
     "    print(f\"Best params for {model.__class__.__name__}: {clf.best_params_}\")\n",
-    "        \n",
-    "    evaluate_model(clf, testing_inputs, testing_classes, output_cols, sample_weight=sample_weight)\n",
-    "    return resclf.best_estimator_['model']\n",
+    "    evaluate_model(clf, X_test, y_test, sample_weight=sample_weight)\n",
     "\n",
-    "def train_and_use_model(model, params, scoring=f1_score, n_iter=None, sample_weight=None, random_state=42, plot_roc=True, oversample=False):\n",
+    "    return res_clf.best_estimator_[\"model\"]\n",
+    "\n",
+    "\n",
+    "def predict_model(df, X_test, model):\n",
     "    \"\"\"\n",
     "    A more convenient wrapper around train_and_evaluate, albeit less general.\n",
     "    \"\"\"\n",
-    "    return train_and_evaluate(input_cols, output_cols, model, params, sample_weight=sample_weight, n_iter=n_iter, random_state=random_state, scoring=scoring, plot_roc=plot_roc, oversample=oversample)\n"
+    "\n",
+    "    results = df.loc[df[\"partition\"] != \"train\", \"utt\"].copy()\n",
+    "    results[\"utt_predicted\"] = model.predict(X_test)\n",
+    "    results.to_csv(f\"output/predictive/{model.__class__.__name__}_results.csv\", index=False)\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "def train_and_use_model(\n",
+    "    df,\n",
+    "    X,\n",
+    "    y,\n",
+    "    model,\n",
+    "    params,\n",
+    "    scoring=\"roc_auc\",\n",
+    "    n_iter=None,\n",
+    "    sample_weight=None,\n",
+    "    random_state=42,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    A more convenient wrapper around train_and_evaluate, albeit less general.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    X_train, X_test = X\n",
+    "    y_train, y_test = y\n",
+    "\n",
+    "    clf = train_and_evaluate(\n",
+    "        (X_train, X_test),\n",
+    "        (y_train, y_test),\n",
+    "        model,\n",
+    "        params,\n",
+    "        sample_weight=sample_weight,\n",
+    "        n_iter=n_iter,\n",
+    "        random_state=random_state,\n",
+    "        scoring=scoring,\n",
+    "    )\n",
+    "    return predict_model(df, X_test, clf)"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
