--- a/preprocess_nolang.ipynb
+++ b/preprocess_nolang.ipynb
@@ -59,6 +59,25 @@
     "    drop = [\"worker_id\", \"slot_method\", \"judgments\"]\n",
     "    return data.drop(drop, axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "intent_labels = None\n",
+    "\n",
+    "def encode_labels(data: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Encode labels\"\"\"\n",
+    "    le = LabelEncoder()\n",
+    "    le.fit(data['intent'])\n",
+    "    data['intent'] = le.transform(data['intent'])\n",
+    "    intent_labels = le.inverse_transform(data['intent'].unique())\n",
+    "    return data"
+   ]
   }
  ],
  "metadata": {
