--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -255,12 +255,16 @@
    "source": [
     "from toolz.functoolz import pipe\n",
     "\n",
-    "df = pipe(\n",
-    "    df,\n",
+    "params = [\n",
     "    remove_punctuation,\n",
     "    lowercase,\n",
     "    tokenize,\n",
-    "    apply_stemming,\n",
+    "    apply_stemming\n",
+    "]\n",
+    "\n",
+    "df = pipe(\n",
+    "    df,\n",
+    "    *params\n",
     ")\n"
    ]
   },
@@ -292,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
