--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -13,10 +13,21 @@
     "%matplotlib inline \n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, RocCurveDisplay, make_scorer\n",
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, RocCurveDisplay, make_scorer, multilabel_confusion_matrix\n",
     "from sklearn.model_selection import learning_curve\n",
+    "from imblearn.combine import SMOTETomek\n",
+    "from imblearn.under_sampling import TomekLinks\n",
     "import datetime\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, StackingClassifier\n",
+    "from lightgbm import LGBMClassifier\n",
+    "from xgboost import XGBClassifier\n",
     "# Adapted from https://scikit-learn.org/stable/auto_examples/model_selection/plot_learning_curve.html\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -30,11 +41,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adapted from https://scikit-learn.org/stable/auto_examples/model_selection/plot_learning_curve.html\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import learning_curve\n",
+    "from imblearn.pipeline import Pipeline\n",
+    "\n",
     "def plot_learning_curve(\n",
     "    title,\n",
-    "    train_sizes,\n",
-    "    train_scores,\n",
-    "    test_scores,\n",
+    "    train_sizes, \n",
+    "    train_scores, \n",
+    "    test_scores, \n",
     "    fit_times,\n",
     "    score_times,\n",
     "    axes=None,\n",
@@ -105,7 +122,7 @@
     "    axes = axes.reshape(-1)\n",
     "    fig.subplots_adjust(hspace=0.5, wspace=0.5)\n",
     "    fig = fig.delaxes(axes[-1])\n",
-    "\n",
+    "    \n",
     "    axes[0].set_title(title)\n",
     "    if ylim is not None:\n",
     "        axes[0].set_ylim(*ylim)\n",
@@ -215,194 +232,117 @@
    "outputs": [],
    "source": [
     "# The following helper functions are for training and evaluating the model\n",
+    "from sklearn.metrics import f1_score\n",
+    "from math import ceil\n",
     "\n",
-    "\n",
-    "def show_confusion_matrix(cms, target_names):\n",
+    "def show_confusion_matrix(cms, target_names, output_labels, title):\n",
     "    \"\"\"\n",
     "    This helper function plots the confusion matrices calculated when evaluating the model.\n",
     "    \"\"\"\n",
-    "    fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "    ncols = 4\n",
+    "    nrows = int(ceil(len(cms) / ncols))\n",
+    "    fig, axs = plt.subplots(nrows, ncols, figsize=(5*ncols,5*nrows))\n",
+    "    fig.suptitle(title, fontsize=32)\n",
     "    fig.subplots_adjust(hspace=0.3, wspace=0.3)\n",
     "\n",
-    "    gnames = [\"True Negative\", \"False Positive\", \"False Negative\", \"True Positive\"]\n",
-    "    gcounts = [f\"{v:0.0f}\" for v in cms.flatten()]\n",
-    "    gpercentages = [f\"{v:.2%}\" for v in cms.flatten() / np.sum(cms)]\n",
-    "    annot = np.asarray(\n",
-    "        [\n",
-    "            f\"{name}\\n{count}\\n{percentage}\"\n",
-    "            for name, count, percentage in zip(gnames, gcounts, gpercentages)\n",
-    "        ]\n",
-    "    ).reshape(2, 2)\n",
+    "    for ax in axs.reshape(-1)[len(cms):]:\n",
+    "        fig.delaxes(ax)\n",
     "\n",
-    "    sns.heatmap(\n",
-    "        cms,\n",
-    "        ax=ax,\n",
-    "        annot=annot,\n",
-    "        fmt=\"\",\n",
-    "        cmap=\"Blues\",\n",
-    "        xticklabels=target_names,\n",
-    "        yticklabels=target_names,\n",
-    "    )\n",
-    "    ax.set_ylabel(\"Actual\")\n",
-    "    ax.set_xlabel(\"Predicted\")\n",
-    "    ax.xaxis.tick_top()\n",
-    "    ax.xaxis.set_label_position(\"top\")\n",
+    "    for cm, ax, label in zip(cms, axs.reshape(-1), output_labels):\n",
+    "        gnames = [\"True Negative\", \"False Positive\", \"False Negative\", \"True Positive\"]\n",
+    "        gcounts = [f\"{v:0.0f}\" for v in cm.flatten()]\n",
+    "        gpercentages = [f\"{v:.2%}\" for v in cm.flatten()/np.sum(cm)]\n",
+    "        annot = np.asarray([f\"{name}\\n{count}\\n{percentage}\" for name, count, percentage in zip(gnames, gcounts, gpercentages)]).reshape(2, 2)\n",
     "\n",
+    "        sns.heatmap(cm, ax=ax, annot=annot, fmt=\"\", cmap=\"Blues\", xticklabels=target_names, yticklabels=target_names)\n",
+    "        ax.set_title(label)\n",
+    "        ax.set_ylabel('Actual')\n",
+    "        ax.set_xlabel('Predicted')\n",
+    "        ax.xaxis.tick_top()\n",
+    "        ax.xaxis.set_label_position('top')\n",
     "\n",
-    "def evaluate_model(model, X_test, y_test, sample_weight=None):\n",
+    "def evaluate_model(model, testing_inputs, testing_classes, output_cols, sample_weight=None):\n",
     "    \"\"\"\n",
     "    This helper function prints the report and evaluation metrics for the model.\n",
     "    \"\"\"\n",
-    "    predictions = model.predict(X_test)\n",
+    "    predictions = model.predict(testing_inputs)\n",
     "\n",
-    "    print(\"-\" * 50)\n",
+    "    print(\"=\"*70)\n",
     "    print(f\"Evaluation metrics for {model.__class__.__name__}\")\n",
-    "    print(\"-\" * 50)\n",
+    "    print(\"=\"*70)\n",
     "\n",
-    "    score = model.score(X_test, y_test)\n",
+    "    score = model.score(testing_inputs, testing_classes) \n",
     "    print(f\"{model.__class__.__name__}'s default score metric: {score}\")\n",
+    "\n",
     "\n",
     "    print(\"Classification report\")\n",
     "    print(\n",
-    "        classification_report(\n",
-    "            y_test,\n",
-    "            predictions,\n",
-    "            sample_weight=sample_weight,\n",
-    "            digits=4,\n",
-    "            zero_division=1,\n",
-    "        )\n",
+    "        classification_report(testing_classes, predictions, sample_weight=sample_weight, digits=4, zero_division=1)\n",
     "    )\n",
     "\n",
-    "    accuracy = accuracy_score(y_test, predictions, sample_weight=sample_weight)\n",
+    "    accuracy = accuracy_score(testing_classes, predictions, sample_weight=sample_weight)\n",
     "    print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "    print(f\"F1 Macro-Score: {f1_score(y_test, predictions, average='macro'):.4f}\")\n",
+    "    print(f\"F1-score: {f1_score(testing_classes, predictions, average='macro'):.4f}\")\n",
+    "    \n",
+    "    #cms = multilabel_confusion_matrix(testing_classes, predictions, sample_weight=sample_weight, samplewise=False)\n",
+    "    #show_confusion_matrix(cms, ['no', 'yes'], intent_labels, f\"Confusion matrices for {model.__class__.__name__}\")\n",
     "\n",
-    "    print(\"-\" * 50)\n",
+    "    print(\"=\"*70)\n",
     "\n",
-    "\n",
-    "def train_and_evaluate(\n",
-    "    X,\n",
-    "    y,\n",
-    "    model,\n",
-    "    params,\n",
-    "    scoring,\n",
-    "    n_iter=None,\n",
-    "    sample_weight=None,\n",
-    "    random_state=42,\n",
-    "):\n",
+    "def train_and_evaluate(input_cols, output_cols, model, params, scoring, n_iter=None, sample_weight=None, random_state=42, oversample=False):\n",
     "    \"\"\"\n",
-    "    Trains the model and prints the evaluation metrics, as well as the confusion matrices, and learning and scalability plots.\n",
+    "    This function trains the model and prints the evaluation metrics, as well as the confusion matrices, and learning and scalability plots.\n",
     "    \"\"\"\n",
-    "\n",
-    "    X_train, X_test = X\n",
-    "    y_train, y_test = y\n",
-    "\n",
-    "    pipeline = Pipeline([(\"model\", model)])\n",
-    "\n",
-    "    scoring = make_scorer(scoring, needs_proba=True)\n",
-    "\n",
+    "    training_inputs = df[df['partition'] != 'test'][input_cols].values\n",
+    "    testing_inputs = df[df['partition'] == 'test'][input_cols].values\n",
+    "    training_classes = df[df['partition'] != 'test'][output_cols].values\n",
+    "    testing_classes = df[df['partition'] == 'test'][output_cols].values\n",
+    "    \n",
+    "    pipeline = Pipeline([('model', model)])\n",
+    "    \n",
+    "    if (oversample):\n",
+    "        pipeline = Pipeline([\n",
+    "            ('resampler', SMOTETomek(tomek=TomekLinks(sampling_strategy='majority'))),\n",
+    "            ('model', model)\n",
+    "        ])\n",
+    "    \n",
     "    if n_iter == None:\n",
     "        clf = GridSearchCV(pipeline, params, n_jobs=-1, scoring=scoring, verbose=0)\n",
     "    else:\n",
     "        clf = RandomizedSearchCV(\n",
-    "            pipeline,\n",
-    "            params,\n",
-    "            n_iter=n_iter,\n",
-    "            scoring=scoring,\n",
-    "            n_jobs=-1,\n",
-    "            random_state=random_state,\n",
-    "            verbose=0,\n",
-    "        )\n",
+    "                pipeline, params, n_iter=n_iter, scoring=scoring,\n",
+    "                n_jobs=-1, random_state=random_state, verbose=0)\n",
+    "    \n",
+    "    resclf = clf.fit(training_inputs, training_classes)\n",
     "\n",
-    "    train_sizes, train_scores, test_scores, fit_times, score_times = learning_curve(\n",
-    "        clf,\n",
-    "        X_train,\n",
-    "        y_train,\n",
-    "        return_times=True,\n",
-    "        cv=5,\n",
-    "        n_jobs=-1,\n",
-    "        random_state=random_state,\n",
-    "    )\n",
-    "\n",
-    "    plot_learning_curve(\n",
-    "        f\"Learning curves for {model.__class__.__name__}\",\n",
-    "        train_sizes,\n",
-    "        train_scores,\n",
-    "        test_scores,\n",
-    "        fit_times,\n",
-    "        score_times,\n",
-    "    )\n",
-    "\n",
-    "    res_clf = clf.fit(X_train, y_train)\n",
-    "\n",
+    "    if isinstance(model, DecisionTreeClassifier):\n",
+    "        plot_tree(resclf.best_estimator_['model'], feature_names=input_cols)\n",
+    "        plt.savefig(f'output/{model.__class__.__name__}_tree_diagram.svg')\n",
+    "    \n",
     "    print(f\"Best params for {model.__class__.__name__}: {clf.best_params_}\")\n",
-    "    evaluate_model(clf, X_test, y_test, sample_weight=sample_weight)\n",
+    "        \n",
+    "    evaluate_model(clf, testing_inputs, testing_classes, output_cols, sample_weight=sample_weight)\n",
+    "    return resclf.best_estimator_['model']\n",
     "\n",
-    "    return res_clf.best_estimator_[\"model\"]\n",
-    "\n",
-    "\n",
-    "def predict_model(df, X_test, model):\n",
+    "def train_and_use_model(model, params, scoring='f1_macro', n_iter=None, sample_weight=None, random_state=42, oversample=False):\n",
     "    \"\"\"\n",
     "    A more convenient wrapper around train_and_evaluate, albeit less general.\n",
     "    \"\"\"\n",
-    "\n",
-    "    results = df.loc[df[\"partition\"] != \"train\", \"utt\"].copy()\n",
-    "    results[\"utt_predicted\"] = model.predict(X_test)\n",
-    "    results.to_csv(f\"output/predictive/{model.__class__.__name__}_results.csv\", index=False)\n",
-    "\n",
-    "    return model\n",
-    "\n",
-    "\n",
-    "def train_and_use_model(\n",
-    "    df,\n",
-    "    X,\n",
-    "    y,\n",
-    "    model,\n",
-    "    params,\n",
-    "    scoring=\"roc_auc\",\n",
-    "    n_iter=None,\n",
-    "    sample_weight=None,\n",
-    "    random_state=42,\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    A more convenient wrapper around train_and_evaluate, albeit less general.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    X_train, X_test = X\n",
-    "    y_train, y_test = y\n",
-    "\n",
-    "    clf = train_and_evaluate(\n",
-    "        (X_train, X_test),\n",
-    "        (y_train, y_test),\n",
-    "        model,\n",
-    "        params,\n",
-    "        sample_weight=sample_weight,\n",
-    "        n_iter=n_iter,\n",
-    "        random_state=random_state,\n",
-    "        scoring=scoring,\n",
-    "    )\n",
-    "    return predict_model(df, X_test, clf)"
+    "    return train_and_evaluate(input_cols, output_cols, model, params, sample_weight=sample_weight, n_iter=n_iter, random_state=random_state, scoring=scoring, oversample=oversample)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.2"
-  }
+   "version": "3.10.10"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
