Changes on evaluation and add exploratory analysis

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -71,7 +71,7 @@
     "df = pd.DataFrame()\n",
     "\n",
     "for json_file in os.listdir('dataset/jsonl'):\n",
-    "    df = pd.concat([df, pd.read_json('dataset/jsonl/' + json_file, lines=True)])\n",
+    "    df = pd.concat([df, pd.read_json('dataset/jsonl/' + json_file, lines=True)], ignore_index=True)\n",
     "    print(f\"Added {json_file} to dataframe\")"
    ]
   },
