--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -231,37 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The following helper functions are for training and evaluating the model\n",
-    "from sklearn.metrics import f1_score\n",
-    "from math import ceil\n",
-    "\n",
-    "def show_confusion_matrix(cms, target_names, output_labels, title):\n",
-    "    \"\"\"\n",
-    "    This helper function plots the confusion matrices calculated when evaluating the model.\n",
-    "    \"\"\"\n",
-    "    ncols = 4\n",
-    "    nrows = int(ceil(len(cms) / ncols))\n",
-    "    fig, axs = plt.subplots(nrows, ncols, figsize=(5*ncols,5*nrows))\n",
-    "    fig.suptitle(title, fontsize=32)\n",
-    "    fig.subplots_adjust(hspace=0.3, wspace=0.3)\n",
-    "\n",
-    "    for ax in axs.reshape(-1)[len(cms):]:\n",
-    "        fig.delaxes(ax)\n",
-    "\n",
-    "    for cm, ax, label in zip(cms, axs.reshape(-1), output_labels):\n",
-    "        gnames = [\"True Negative\", \"False Positive\", \"False Negative\", \"True Positive\"]\n",
-    "        gcounts = [f\"{v:0.0f}\" for v in cm.flatten()]\n",
-    "        gpercentages = [f\"{v:.2%}\" for v in cm.flatten()/np.sum(cm)]\n",
-    "        annot = np.asarray([f\"{name}\\n{count}\\n{percentage}\" for name, count, percentage in zip(gnames, gcounts, gpercentages)]).reshape(2, 2)\n",
-    "\n",
-    "        sns.heatmap(cm, ax=ax, annot=annot, fmt=\"\", cmap=\"Blues\", xticklabels=target_names, yticklabels=target_names)\n",
-    "        ax.set_title(label)\n",
-    "        ax.set_ylabel('Actual')\n",
-    "        ax.set_xlabel('Predicted')\n",
-    "        ax.xaxis.tick_top()\n",
-    "        ax.xaxis.set_label_position('top')\n",
-    "\n",
-    "def evaluate_model(model, testing_inputs, testing_classes, output_cols, sample_weight=None):\n",
+    "def evaluate_model(model, testing_inputs, testing_classes, encoder, indices, sample_weight=None):\n",
     "    \"\"\"\n",
     "    This helper function prints the report and evaluation metrics for the model.\n",
     "    \"\"\"\n",
@@ -275,21 +245,32 @@
     "    print(f\"{model.__class__.__name__}'s default score metric: {score}\")\n",
     "\n",
     "\n",
-    "    print(\"Classification report\")\n",
+    "    print(f\"Classification report\")\n",
     "    print(\n",
     "        classification_report(testing_classes, predictions, sample_weight=sample_weight, digits=4, zero_division=1)\n",
     "    )\n",
     "\n",
     "    accuracy = accuracy_score(testing_classes, predictions, sample_weight=sample_weight)\n",
     "    print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "    print(f\"F1-score: {f1_score(testing_classes, predictions, average='macro'):.4f}\")\n",
+    "    print(f\"F1-score: {f1_score(testing_classes, predictions, average='micro'):.4f}\")\n",
     "    \n",
-    "    #cms = multilabel_confusion_matrix(testing_classes, predictions, sample_weight=sample_weight, samplewise=False)\n",
-    "    #show_confusion_matrix(cms, ['no', 'yes'], intent_labels, f\"Confusion matrices for {model.__class__.__name__}\")\n",
+    "    \n",
+    "    print(testing_classes.shape, predictions.shape)\n",
+    "    for lang in indices.keys():\n",
+    "        plt.figure(figsize = (40,28))\n",
+    "        freq = pd.crosstab(\n",
+    "            decode_labels(testing_classes[indices[lang]], encoder), \n",
+    "            decode_labels(predictions[indices[lang]], encoder), \n",
+    "            normalize='index', rownames=['Actual'], colnames=['Predicted'])\n",
+    "        freq = np.round(freq, 3)\n",
+    "        ax = plt.axes()\n",
+    "        sns.heatmap(freq, annot=True)\n",
+    "        ax.set_title(f'Confusion matrix for {lang}')\n",
+    "        plt.show()\n",
     "\n",
     "    print(\"=\"*70)\n",
     "\n",
-    "def train_and_evaluate(input_cols, output_cols, model, params, scoring, n_iter=None, sample_weight=None, random_state=42, oversample=False):\n",
+    "def train_and_evaluate(input_cols, output_cols, model, params, scoring, n_iter=None, sample_weight=None, random_state=42, oversample=False, indices=None, encoder=None):\n",
     "    \"\"\"\n",
     "    This function trains the model and prints the evaluation metrics, as well as the confusion matrices, and learning and scalability plots.\n",
     "    \"\"\"\n",
@@ -321,14 +302,14 @@
     "    \n",
     "    print(f\"Best params for {model.__class__.__name__}: {clf.best_params_}\")\n",
     "        \n",
-    "    evaluate_model(clf, testing_inputs, testing_classes, output_cols, sample_weight=sample_weight)\n",
+    "    evaluate_model(clf, testing_inputs, testing_classes, output_cols, encoder, indices, sample_weight=sample_weight)\n",
     "    return resclf.best_estimator_['model']\n",
     "\n",
-    "def train_and_use_model(model, params, scoring='f1_macro', n_iter=None, sample_weight=None, random_state=42, oversample=False):\n",
+    "def train_and_use_model(model, params, scoring='f1_macro', n_iter=None, sample_weight=None, random_state=42, oversample=False, indices=None, encoder=None):\n",
     "    \"\"\"\n",
     "    A more convenient wrapper around train_and_evaluate, albeit less general.\n",
     "    \"\"\"\n",
-    "    return train_and_evaluate(input_cols, output_cols, model, params, sample_weight=sample_weight, n_iter=n_iter, random_state=random_state, scoring=scoring, oversample=oversample)"
+    "    return train_and_evaluate(input_cols, output_cols, model, params, sample_weight=sample_weight, n_iter=n_iter, random_state=random_state, scoring=scoring, oversample=oversample, indices=indices, encoder=encoder)"
    ]
   }
  ],
