--- a/preprocess_nolang.ipynb
+++ b/preprocess_nolang.ipynb
@@ -67,15 +67,25 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "intent_labels = None\n",
+    "import numpy as np\n",
     "\n",
     "def encode_labels(data: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Encode labels\"\"\"\n",
     "    le = LabelEncoder()\n",
     "    le.fit(data['intent'])\n",
     "    data['intent'] = le.transform(data['intent'])\n",
-    "    intent_labels = le.inverse_transform(data['intent'].unique())\n",
+    "    return data, le\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode_labels(data: np.ndarray, le: LabelEncoder) -> np.ndarray:\n",
+    "    \"\"\"Decode labels\"\"\"\n",
+    "    data = le.inverse_transform(data)\n",
     "    return data"
    ]
   }
