--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -252,11 +252,20 @@
     "\n",
     "    accuracy = accuracy_score(testing_classes, predictions, sample_weight=sample_weight)\n",
     "    print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "    print(f\"F1-score: {f1_score(testing_classes, predictions, average='micro'):.4f}\")\n",
+    "    print(f\"F1-score: {f1_score(testing_classes, predictions, average='macro'):.4f}\")\n",
     "    \n",
+    "    if not indices:\n",
+    "        return\n",
     "    \n",
-    "    print(testing_classes.shape, predictions.shape)\n",
     "    for lang in indices.keys():\n",
+    "        accuracy_lang = accuracy_score(testing_classes[indices[lang]], predictions[indices[lang]], sample_weight=sample_weight)\n",
+    "        print(f\"Accuracy for {lang}: {accuracy_lang:.4f}\")\n",
+    "    \n",
+    "    \n",
+    "    for lang in ['en', 'ja', 'zh', 'ar']:\n",
+    "        if lang not in indices.keys():\n",
+    "            continue\n",
+    "            \n",
     "        plt.figure(figsize = (40,28))\n",
     "        freq = pd.crosstab(\n",
     "            decode_labels(testing_classes[indices[lang]], encoder), \n",
@@ -302,7 +311,7 @@
     "    \n",
     "    print(f\"Best params for {model.__class__.__name__}: {clf.best_params_}\")\n",
     "        \n",
-    "    evaluate_model(clf, testing_inputs, testing_classes, output_cols, encoder, indices, sample_weight=sample_weight)\n",
+    "    evaluate_model(clf, testing_inputs, testing_classes, encoder, indices, sample_weight=sample_weight)\n",
     "    return resclf.best_estimator_['model']\n",
     "\n",
     "def train_and_use_model(model, params, scoring='f1_macro', n_iter=None, sample_weight=None, random_state=42, oversample=False, indices=None, encoder=None):\n",
@@ -323,7 +332,12 @@
    "name": "python",
    "version": "3.10.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "977cd4336f4538d170b2e975b8afcec38d10dc2076c29b717fcf78d7fa79bfff"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
